gcc/testsuite/algol68/compile/formal-bounds-expected-1.a68
module Foo =
def pub op - = ([3]int a) int: skip; { dg-error "formal bounds expected" }
    op + = ([3]int a) int: skip;     { dg-error "formal bounds expected" }
    skip
fed
